# thoughtOS

./: .env.example  .gitignore  .mcp.json  docker-compose.yml  pyproject.toml  thinkOS設計仕様書.md
.claude/: settings.local.json
db/: init.sql
mcp_server/: server.py
prompts/: build_session.txt  categorize.txt  extract_pattern.txt  summarize.txt
scripts/: import_files.py  migrate_file_hash.py  run_mcp.py  run_pipeline.py  run_web.py  setup_db.py
src/: claude_client.py  config.py  db.py  embedder.py  pipeline.py
src/parsers/: base.py  chrome_history_parser.py  claude_parser.py  file_parser.py  google_browse_parser.py  google_search_parser.py
src/parsers/extractors/: __init__.py  csv_extractor.py  docx_extractor.py  json_extractor.py  md_extractor.py  pdf_extractor.py  txt_extractor.py
src/processors/: categorizer.py  pattern_extractor.py  session_builder.py  summarizer.py
tests/: test_parsers.py  test_processors.py
tests/fixtures/: claude_sample.json  google_browse_sample.json  google_search_sample.json  sample.csv  sample.md  sample.txt
web/: app.py
web/static/: index.html
